--- a/style/style.css
+++ b/style/style.css
@@ -3,64 +3,136 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    list-style: none;
     text-decoration: none;
-    font-size: 18px;
+    list-style: none;
+}
+body{
     font-family: 'Poppins', sans-serif;
+    background-size: cover;
+    height: 100vh;
+    width: 100vw;
+    background-image: url('../img/index.jpg');
 }
 
-/* le header */
-.nav-bar ul li a:hover{
-    color: #11101b;
-    background: #fefefe;
+.navbar{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    width: 100%;
+    min-height: 8vh;
+    background-color: rgb(37, 82, 82);
 }
-.nav-bar ul li a.active{
-    color: #11101b;
-    background: #fefefe;
+.logo{
+    color: white;
+    text-transform: uppercase;
+    letter-spacing: 3px;
+    font-weight: bold;
+    font-size: 22px;
 }
-@media only screen and (max-width: 1320px){
-    header{
-        padding: 0 50px;
-    }
+.nav-links{
+    display: flex;
+    justify-content: space-around;
+    width: 38%;
 }
-@media only screen and (max-width: 1100px){
-    header{
-        padding: 0 30px;
-    }
+.nav-links li a{
+    color: white;
+    letter-spacing: 2px;
+    font-weight: bold;
+    font-size: 16px;
 }
-/* hamburger */
-@media only screen and (max-width: 900px){
-    .hamburger{
-        display: block;
-        cursor: pointer;
-    }
-    .hamburger .line{
-        width: 30px;
-        height: 3px;
-        background: #fefefe;
-        margin: 6px 0;
-    }
-    .nav-bar {
-        position: absolute;
-        height: 0;
-        top: 80px;
-        left: 0;
-        right: 0;
-        width: 100vw;
-        background: #11101b;
-        transition: 1s;
-        overflow: hidden;
-    }
-    .nav-bar ul{
-        display: block;
-        width: fit-content;
-        margin: 80px auto 0 auto;
-        text-align: center;
-        transition: 0.5s;
-        opacity: 0;
-    }
-    .nav-bar ul li a{
-        margin-bottom: 12px;
-        color: red;
-    }
+.burger{
+    display: none;
+    cursor: pointer;
 }
+.burger div{
+    height: 3px;
+    width: 25px;
+    background-color: white;
+    margin: 5px;
+}
+.github{
+margin: 42% 0 0 9%;
+color: rgb(37, 82, 82);
+background-color: white;
+padding: 10px;
+border-radius: 20px;
+font-size: large;
+font-weight: bold;
+}
+.admin_tabl{
+    /* backdrop-filter: sepia(90%); */
+    backdrop-filter: blur(10px);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    width: 30%;
+    margin-left: 35%;
+    padding: 10px 25px;
+    color: black;
+    font-size: 20px;
+
+}
+.admin_tabl h3{
+    padding: 30px 0;
+    color: white;
+}
+.admin_tabl thead th{
+    border: 2px white solid;
+    padding: 4px;
+    color: white;
+}
+.admin_tabl tbody td{
+    border: 2px white solid;
+    padding: 4px;
+}
+.bienvenue{
+    
+    margin-top: 10%;
+    font-size: 70px;
+    transform: translateX(30%);
+    transition: transform 1.3s ease-in;
+    font: bold;
+}
+@media screen and (max-width: 1024px){
+.nav-links{
+    display: flex;
+    justify-content: space-around;
+    width: 65%;
+}
+.github{
+    margin: 25% 0 0 20%;
+
+}
+  
+}
+@media screen and (max-width: 768px){
+body{
+overflow: hidden;
+}    
+.nav-links{
+    position: absolute;
+    right: 0px;
+    height: 92vh;
+    top: 8vh;
+    background-color:  rgb(37, 82, 82);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 50%;
+    transform: translateX(100%);
+    transition: transform 1s ease-in;
+
+}
+.burger{
+    display: block;
+}
+.nav-active{
+    transform: translateX(0%);
+}
+.github{
+    margin: 50% 0% 0 14%;
+}
+
+}
+
