--- a/style/connect.css
+++ b/style/connect.css
@@ -2,3 +2,41 @@
 .errs{
     
 }
+main{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 84vh;
+    width: 84%;
+}
+h1{
+    padding-bottom: 20px;
+}
+form{
+    display: flex;
+    flex-direction: column;
+    font-size: 22px;
+}
+input{
+    margin: 5px 0;
+    padding: 5px 0;
+    border-radius: 8px;
+
+}
+#submit {
+    background-color: rgb(37, 82, 82);
+    color: white;
+    font-size: 24px;
+    padding: 3px 0;
+}
+.form_conn{
+backdrop-filter: sepia(90%);
+padding: 30px;
+border-radius: 25px;
+}
+#erreur{
+    padding: 10px;
+    font-weight: bold;
+    color: rgb(238, 94, 37);
+    
+}
