--- a/style/style.css
+++ b/style/style.css
@@ -42,12 +42,18 @@ body{
     display: flex;
     justify-content: space-around;
     width: 38%;
+
+}
+.nav-links li, .nav-links li button{
+    margin: 0 20px;
+
 }
 .nav-links li a{
     color: white;
     letter-spacing: 2px;
     font-weight: bold;
     font-size: 16px;
+
 }
 .burger{
     display: none;
@@ -97,7 +103,7 @@ footer{
 .nav-links{
     display: flex;
     justify-content: space-around;
-    width: 65%;
+    width: 75%;
 }
 
   
@@ -115,7 +121,7 @@ overflow: hidden;
     display: flex;
     flex-direction: column;
     align-items: center;
-    width: 50%;
+    width: 60%;
     transform: translateX(100%);
     transition: transform 1s ease-in;
 
